--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hi, I'm [Your Name]!</h1>
+        <h1>Hi, I'm Nathaniel!</h1>
         
         <div class="section intro-section">
             <h2>Who?</h2>
